--- a/pre-build/scss/component.scss
+++ b/pre-build/scss/component.scss
@@ -208,7 +208,8 @@ overflow-y: auto; background-color: #f5f5f5; z-index: 1100;
 }
 
 .backArea{position: absolute; left: 340px; top: 22px;
-  .btnBack{position: relative; display: block; width: 30px; height: 30px; background: url("../images/ico/ico-back.svg")no-repeat center;
+  .btnBack{position: relative; display: block; width: 30px; height: 30px; background-image: url("../images/ico/ico-home.png"); 
+    background-repeat: no-repeat; background-position: center; background-size: 30px 30px;
     &:before{content: ''; opacity: 0; visibility: hidden; position: absolute; left: -5px; top: -5px; z-index: -1;
       width: 40px; height: 40px; border-radius: 50px; transition: .5s ease-in-out; background-color: rgba($color: #ddd, $alpha: 0.5);}
     &:hover{
@@ -275,8 +276,7 @@ overflow-y: auto; background-color: #f5f5f5; z-index: 1100;
   +.btnArea{margin-top: 50px;}
 }
 
-.rightArea{position: absolute; right: 0; top: 0; /*left: 500px;*/ left: calc(50% - 402px);
-width: 1200px; padding: 115px 0; z-index:950;
+.rightArea{position: absolute; right: 0; top: 0; left: calc(50% - 402px); width: 1200px; padding: 115px 0; z-index:950;
   .highlightArea{max-height: 500px;
     +.titleH2{margin-top: 20px;}
   }
@@ -617,14 +617,14 @@ border-radius:4px; background:#f5f5f5;
   &.fixed{position: fixed;}
 }
 
-#toast{display: none; position: absolute; top: 120px; left: 50%; transform: translateX(-50%); 
+#toast{display: none; position: fixed; top: 120px; left: 50%; transform: translateX(-50%); 
 width: 290px; padding: 12px; box-sizing: border-box; border-radius: 4px; z-index: 9999;
 background-color: rgba($color: #000, $alpha: 0.65);
   span{display: inline-block; text-align: center; font-size: 14px; color: #fff; font-family: '맑은 고딕';}
 }
 
 /* 모바일 */
-.moreArea{position: absolute; top: 20px; left: 20px; z-index: 1200; transition: .3s;
+.moreArea{display: none; position: absolute; top: 20px; left: 20px; z-index: 1200; transition: .3s;
   .btnMobileMore{width: 24px; height: 24px; background-repeat: no-repeat; background-size: 24px 24px; background-position: center; 
   background-image: url("../images/mobile/ico-mobile-more.png");}
 }
