--- a/pre-build/scss/component.scss
+++ b/pre-build/scss/component.scss
@@ -57,14 +57,20 @@ body,html{font-family:'Noto Sans DemLight', "맑은 고딕", "Malgun Gothic", Do
 }
 .tScroll{display: block;}
 
-/* 색상변수 */
-$c20 : #202020;
-$c333 : #333;
-$c70 : #707070;
-$emphasisType01 : #266bf7; //leftArea 텍스트랑 a.link 텍스트
-$emphasisType02: #1694d2; // a.mail
+html{
+  &.light{
+    $c20 : #202020 !global;
+    $c333 : #333 !global;
+    $c70 : #707070 !global;
+    $emphasisType01 : #266bf7 !global;
+    $emphasisType02: #1694d2 !global; 
+  }
 
-
+  &.dark{
+    $c20 : red;
+    .titleH1{color: $c20;}
+  }
+}
 
 #wrap{width: 100%; height: 100%;
   &.main{position: relative; transition: .5s; background-color: #4e4e4e;
@@ -209,6 +215,12 @@ overflow-y: auto; background-color: #f5f5f5; z-index: 1100;
           .toolTip.more{opacity: 1; visibility: visible;}
         }
       }
+      &.btnDarkMode{width: 30px; height: 30px; background-image: url("../images/ico/ico-brightness.png"); background-position: center;
+      background-repeat: no-repeat; background-size: 30px 30px;
+        &:hover{
+          .toolTip.more{opacity: 1; visibility: visible;}
+        }
+      }
     }
     +li{margin-left: 30px;}
     &:hover{
@@ -309,6 +321,7 @@ box-shadow: 0px 0px 8px rgba($color: #000, $alpha: 0.35);
         +.inputArea{margin-top: 25px;}
       }
       .inputArea{
+        button{height: 30px; line-height: 30px;}
         input{margin-right: 15px;}
       }
     }
