--- a/pre-build/scss/component.scss
+++ b/pre-build/scss/component.scss
@@ -43,8 +43,10 @@ caption,hr{display:none;}
 pre{word-break:break-all;white-space:pre-line;margin: 0 !important;}
 li{list-style: none;}
 
+@import 'variable.scss';
+
 /* common */
-body,html{font-family:'Noto Sans DemLight', "맑은 고딕", "Malgun Gothic", Dotum, sans-serif;font-size:13px;color: #333;letter-spacing:-0.045em !important;}
+body,html{font-family:'Noto Sans DemLight', "맑은 고딕", "Malgun Gothic", Dotum, sans-serif;font-size:13px;color: $c333;letter-spacing:-0.045em !important;}
 .hidden{display:block;margin: 0;padding: 0;width: 0;height: 0;overflow: hidden;font-size: 0;line-height: 0;visibility: hidden;}
 
 
@@ -56,21 +58,6 @@ body,html{font-family:'Noto Sans DemLight', "맑은 고딕", "Malgun Gothic", Do
   &.maxH4{max-height: 400px;}
 }
 .tScroll{display: block;}
-
-html{
-  &.light{
-    $c20 : #202020 !global;
-    $c333 : #333 !global;
-    $c70 : #707070 !global;
-    $emphasisType01 : #266bf7 !global;
-    $emphasisType02: #1694d2 !global; 
-  }
-
-  &.dark{
-    $c20 : red;
-    .titleH1{color: $c20;}
-  }
-}
 
 #wrap{width: 100%; height: 100%;
   &.main{position: relative; transition: .5s; background-color: #4e4e4e;
@@ -90,7 +77,7 @@ html{
       transform: scaleX(0); transform-origin: 0 50%;  transition-duration: 0.3s; transition-property: transform; 
       transition-timing-function: ease-out; background: #fff;}
       &:hover{
-        span{color: #333;
+        span{color: $c333;
           &:after{background: url("../images/ico/ico-arrow-right-bk-shw.png")no-repeat center;}
         }
         &:before{transform: scaleX(1);}
@@ -135,7 +122,7 @@ html{
 
 #container{position: relative; display: flex;}
 
-.leftArea{position: fixed; left: 0; width: 300px; height: 100%; border-right: 1px solid #ddd; 
+.leftArea{position: fixed; left: 0; width: 300px; height: 100%; border-right: 1px solid $cddd; 
 overflow-y: auto; background-color: #f5f5f5; z-index: 1100;
   >.leftMenu{
     >li{position: relative; cursor: pointer;
@@ -181,7 +168,7 @@ overflow-y: auto; background-color: #f5f5f5; z-index: 1100;
   .btnBack{position: relative; display: block; width: 30px; height: 30px; background-image: url("../images/ico/ico-home.png"); 
     background-repeat: no-repeat; background-position: center; background-size: 30px 30px;
     &:before{content: ''; opacity: 0; visibility: hidden; position: absolute; left: -5px; top: -5px; z-index: -1;
-      width: 40px; height: 40px; border-radius: 50px; transition: .5s ease-in-out; background-color: rgba($color: #ddd, $alpha: 0.5);}
+      width: 40px; height: 40px; border-radius: 50px; transition: .5s ease-in-out; background-color: rgba($color: $cddd, $alpha: 0.5);}
     &:hover{
       &:before{opacity: 1; visibility: visible;}
     }
@@ -195,10 +182,10 @@ overflow-y: auto; background-color: #f5f5f5; z-index: 1100;
     .toolTip{opacity: 0; visibility: hidden; position: absolute; top: 42px; left: -14px; transition: .5s ease-in-out; z-index: 100;
       span{display: block; min-width: 60px; padding: 5px 0; box-sizing: border-box; color: #fff;
       font-family: 'Noto Sans'; font-size: 11px; border-radius: 3px; text-align: center;
-      background-color: #333;}
+      background-color: $c333;}
     }
     &:before{content: ''; opacity: 0; visibility: hidden; position: absolute; left: 50%; transform: translateX(-50%); top: -5px; z-index: -1;
-    width: 40px; height: 40px; border-radius: 50px; transition: .5s ease-in-out; background-color: rgba($color: #ddd, $alpha: 0.5);}
+    width: 40px; height: 40px; border-radius: 50px; transition: .5s ease-in-out; background-color: rgba($color: $cddd, $alpha: 0.5);}
     button,a{display: block; width: 30px;height: 30px;
       &.btnMail{background: url("../images/ico/ico-mail.svg")no-repeat center;
         &:hover{
@@ -230,7 +217,7 @@ overflow-y: auto; background-color: #f5f5f5; z-index: 1100;
 }
 
 .moreSubMenu{display: none; position: absolute; top: 40px; right: 0; z-index: 150;
-  >ul{width: 95px; height: 95px; flex-direction: column; border: 1px solid #ddd; box-shadow: 0px 0px 5px 1px #ddd;
+  >ul{width: 95px; height: 95px; flex-direction: column; border: 1px solid $cddd; box-shadow: 0px 0px 5px 1px $cddd;
   box-sizing: border-box; background-color: #f3f4f5;
     >li{flex: 1; display: block; width: 100%; font-family: 'Noto Sans'; line-height: 30px; transition: .5s;
       >a,span{width: auto; height: auto; color: #202020;text-align: center; white-space: nowrap; font-size: 12px;}
@@ -242,7 +229,7 @@ overflow-y: auto; background-color: #f5f5f5; z-index: 1100;
   &.active{display: block;}
 }
 
-.resultArea{border: 1px solid #ddd; border-radius: 4px;
+.resultArea{border: 1px solid $cddd; border-radius: 4px;
   .inner{padding: 15px; box-sizing: border-box;
     .exBox{border: 1px solid #222; height: 150px;
       .overflowDiv{width: 100%; height: 200px;}
@@ -252,7 +239,7 @@ overflow-y: auto; background-color: #f5f5f5; z-index: 1100;
   +.btnArea{margin-top: 50px;}
 }
 
-.rightArea{position: absolute; right: 0; top: 0; left: calc(50% - 402px); width: 1200px; padding: 115px 0; z-index:950;
+.rightArea{position: absolute; right: 0; top: 0; left: calc(50% - 402px); width: 1200px; padding: 92px 0; z-index:950;
   .highlightArea{max-height: 500px;
     +.titleH2{margin-top: 20px;}
   }
@@ -271,7 +258,7 @@ overflow-y: auto; background-color: #f5f5f5; z-index: 1100;
 
 /* h1 ~ h3 */
 .titleH1,.titleH2,.titleH3{font-family: 'Noto Sans'; color: $c20;}
-.titleH1,.titleH2,.titleH3{margin-bottom: 20px; padding-bottom: 15px; font-weight: bold; border-bottom: 1px solid #ddd;}
+.titleH1,.titleH2,.titleH3{margin-bottom: 20px; padding-bottom: 15px; font-weight: bold; border-bottom: 1px solid $cddd;}
 .titleH1{font-size: 32px;}
 .titleH2{font-size: 24px;}
 .titleH3{font-size: 20px;}
@@ -283,15 +270,15 @@ overflow-y: auto; background-color: #f5f5f5; z-index: 1100;
 
 .table{
   table{width: 100%;}
-  th,td{height: 30px; border: 1px solid #ddd; padding: 5px; box-sizing: border-box; font-family: 'Noto Sans';}
-  th{font-size: 14px; color: #333; background-color: #f5f5f5;}
+  th,td{height: 30px; border: 1px solid $cddd; padding: 5px; box-sizing: border-box; font-family: 'Noto Sans';}
+  th{font-size: 14px; color: $c333; background-color: #f5f5f5;}
 
   &.noticeBoard{border-top: 7px solid #222;
     th,td{border: 1px solid #5f5f5f; font-family: 'Noto Sans';
       &:last-child{border-right: 0;}
       &:first-child{border-left: 0;}
     }
-    th{height: 65px; font-size: 18px; color: #3b3b3b; background-color: #ddd;}
+    th{height: 65px; font-size: 18px; color: #3b3b3b; background-color: $cddd;}
     td{height: 40px; font-size: 16px; padding: 15px 25px 15px 25px; box-sizing: border-box; background-color: rgba($color: #f3f4f5, $alpha: 0.8);}
     .tgContRow{display: none;
       .showHideBox{display: none;}
@@ -389,7 +376,7 @@ i.ico{display: inline-block; background-repeat: repeat; background-position: cen
   ul{padding: 0;
     li{padding: 0; list-style: none; font-family: 'Noto Sans';}
   }
-  .head{color: #3b3b3b; font-size: 18px; background: #ddd;
+  .head{color: #3b3b3b; font-size: 18px; background: $cddd;
     >ul{display: flex; border-top: 7px solid #222; border-bottom: 1px solid #5f5f5f; 
       >li{display: inherit; justify-content: center;
         >span{line-height: 65px;}
@@ -413,11 +400,11 @@ i.ico{display: inline-block; background-repeat: repeat; background-position: cen
     }
     .listShowHideBox{display: none; padding: 0 30px; box-sizing: border-box; border-top: 1px solid #5f5f5f; background: rgba($color: #f3f4f5, $alpha: 0.8);
       .inner{padding: 20px 0;
-        .tit{padding-bottom: 15px; border-bottom: 1px solid #ddd;
+        .tit{padding-bottom: 15px; border-bottom: 1px solid $cddd;
           p{font-size: 18px; color: #000; font-family: 'Noto Sans';}
           +dd{margin-top: 20px;}
         }
-        dd{font-size: 14px; color: #333; font-family: 'Noto Sans';
+        dd{font-size: 14px; color: $c333; font-family: 'Noto Sans';
           &:before{content: ''; display: inline-block; width: 6px; height: 6px; border-radius: 50%; vertical-align: middle;
           margin: -4px 10px 0 0; background-color: #000;}
         }
@@ -429,7 +416,7 @@ i.ico{display: inline-block; background-repeat: repeat; background-position: cen
 // update page pagination
 .pager{display: flex; justify-content: center; align-items: center; margin-top: 60px;
   div:not(.pageNumbers){display: flex; justify-content: center; width: 30px; height: 30px;
-  box-sizing: border-box; border: 1px solid #ddd; border-radius: 4px; cursor: pointer; font-size: 16px;
+  box-sizing: border-box; border: 1px solid $cddd; border-radius: 4px; cursor: pointer; font-size: 16px;
   transition: 0.35s ease-in-out;
     &:hover:not(.disabled){border-color: #000;}
   }
@@ -451,7 +438,7 @@ i.ico{display: inline-block; background-repeat: repeat; background-position: cen
   }
   .pageNumbers{margin: 0 50px;
     >a{display: inline-block; width: 32px; height: 32px; line-height: 32px; text-align: center; font-size: 16px;
-    border: 1px solid #ddd; border-radius: 4px; font-family: 'Noto Sans'; color: rgba($color: #222, $alpha: 0.5);
+    border: 1px solid $cddd; border-radius: 4px; font-family: 'Noto Sans'; color: rgba($color: #222, $alpha: 0.5);
     transition: 0.35s ease-in-out;
       +a{margin-left: 5px;}
       &.active,&:hover{border-color: #000; color: rgba($color: #000, $alpha: 1.0)}
@@ -491,5 +478,5 @@ background-color: rgba($color: #000, $alpha: 0.65);
 @import '~/../component/custom.scss';
 @import '~/../component/popup.scss';
 @import '~/../component/etc.scss';
-@import 'darkMode.scss';
+@import '~/../component/tooltip.scss';
 @import 'media.scss';
