--- a/pre-build/html/layout/layout-floatingMenu.html
+++ b/pre-build/html/layout/layout-floatingMenu.html
@@ -1,17 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="icon" href="../../images/ico/ico-favi.png" sizes="16x16" />
-<link rel="stylesheet" href="../../css/component.css" type="text/css" />
-<link rel="stylesheet" href="../../css/prism.css" />
-<script type="text/javascript" src="../../lib/jquery-1.12.4.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.8/clipboard.min.js"></script>
-<script src="../../../js/library/prism.js"></script>
-<script src="../../js/component.js"></script>
-<title>Component css</title>
-
+    @@include('include/head.html')
+    <script src="../../js/component/layout.js"></script>
 </head>
 <body>
     <div id="wrap">
@@ -20,7 +11,7 @@
             <ul class="leftMenu">
               <li>
                 <a href="main.html" title="메인으로">
-                  <img src="../../../images/common/logo.png" alt="서브 메인로고" />
+                    @@include('include/logo.html')
                   <span class="hidden">메인으로</span>
                 </a>
               </li>
@@ -39,7 +30,7 @@
                     <a href="#" title="Header Toggle">Header Toggle</a>
                   </li>
                   <li>
-                    <a href="#" title="scroll Header">scroll Header</a>
+                    <a href="#" title="Sticky Header">Sticky Header</a>
                   </li>
                 </ul>
               </li>
@@ -47,13 +38,13 @@
                 <span title="GNB">GNB</span>
                 <ul class="leftSubMenu">
                   <li>
-                    <a href="#" title="GNB Hover">GNB Hover</a>
+                    <a href="#" title="GNB Hover Full Dropdown">GNB Hover Full Dropdown</a>
                   </li>
                   <li>
-                    <a href="#" title="GNB li Hover">GNB li Hover</a>
+                    <a href="#" title="GNB Menu hover Full Dropdown">GNB Menu hover Full Dropdown</a>
                   </li>
                   <li>
-                    <a href="#" title="GNB li find">GNB li find</a>
+                    <a href="#" title="GNB Hoverable Dropdown">GNB Hoverable Dropdown</a>
                   </li>
                 </ul>
               </li>
@@ -61,10 +52,10 @@
                 <span title="Footer">Footer</span>
                 <ul class="leftSubMenu">
                   <li>
-                    <a href="footer-footer-basic.html" title="Footer basic">Footer basic</a>
+                    <a href="../html/footer/footer-footer-basic.html" title="Footer basic">Footer basic</a>
                   </li>
                   <li>
-                    <a href="footer-footer-fixed.html" title="Footer fixed">Footer fixed</a>
+                    <a href="../html/footer/footer-footer-fixed.html" title="Footer fixed">Footer fixed</a>
                   </li>
                 </ul>
               </li>
@@ -72,21 +63,27 @@
                 <span title="Layout">Layout</span>
                 <ul class="leftSubMenu block">
                   <li>
-                    <a href="layout-centerEle.html" title="Center element">Center element</a>
+                    <a href="../html/layout/layout-centerEle.html" title="Center element">Center element</a>
                   </li>
                   <li>
-                    <a href="layout-tab.html" title="Tab">Tab</a>
+                    <a href="../html/layout/layout-tab.html" title="Tab">Tab</a>
                   </li>
                   <li>
-                    <a href="layout-bg-image.html" title="Background-image 100%">Background-image 100%</a>
+                    <a href="../html/layout/layout-bg-image.html" title="Background-image 100%">Background-image 100%</a>
+                  </li>
+                  <li>
+                    <a href="#" title="Left menu">Left menu</a>
                   </li>
                   <li class="active">
+                    <a href="#" title="Floating menu">Floating menu</a>
+                  </li>
+                  <li class="disabled">
                     <a href="#" title="Slide">Slide</a>
                   </li>
                   <li>
                     <a href="#" title="Flex">Flex</a>
                   </li>
-                  <li>
+                  <li class="disabled">
                     <a href="#" title="Grid">Grid</a>
                   </li>
                 </ul>
@@ -95,19 +92,19 @@
                 <span title="Input">Input</span>
                 <ul class="leftSubMenu">
                   <li>
-                    <a href="input-inputStyle.html" title="Input">input</a>
+                    <a href="../html/input/input-inputStyle.html" title="Input">input</a>
                   </li>
                   <li>
-                    <a href="input-radioStyle.html" title="Radio">radio</a>
+                    <a href="../html/input/input-radioStyle.html" title="Radio">radio</a>
                   </li>
                   <li>
-                    <a href="input-selectStyle.html" title="Select">select</a>
+                    <a href="../html/input/input-selectStyle.html" title="Select">select</a>
                   </li>
                   <li>
-                    <a href="input-textareaStyle.html" title="textarea">textarea</a>
+                    <a href="../html/input/input-textareaStyle.html" title="textarea">textarea</a>
                   </li>
                   <li>
-                    <a href="input-chkboxStyle.html" title="checkbox">checkbox</a>
+                    <a href="../html/input/input-chkboxStyle.html" title="checkbox">checkbox</a>
                   </li>
                 </ul>
               </li>
@@ -115,10 +112,10 @@
                 <span title="Scroll element">Scroll element</span>
                 <ul class="leftSubMenu">
                   <li>
-                    <a href="scroll-ele-table.html" title="table 내부 스크롤">table 내부 스크롤</a>
+                    <a href="../html/scrollele/scroll-ele-table.html" title="table 내부 스크롤">table 내부 스크롤</a>
                   </li>
                   <li>
-                    <a href="scroll-ele-overflow.html" title="Overflow scroll">Overflow scroll</a>
+                    <a href="../html/scrollele/scroll-ele-overflow.html" title="Overflow scroll">Overflow scroll</a>
                   </li>
                 </ul>
               </li>
@@ -126,29 +123,52 @@
                 <span title="Custom">Custom</span>
                 <ul class="leftSubMenu">
                   <li>
-                    <a href="custom-contextMenu.html" title="Context Menu">Context Menu</a>
+                    <a href="../html/custom/custom-contextMenu.html" title="Context Menu">Context Menu</a>
                   </li>
                   <li>
-                    <a href="custom-scroll.html" title="Scroll design">Scroll design</a>
+                    <a href="../html/custom/custom-scroll.html" title="Scroll design">Scroll design</a>
+                  </li>
+                  <li>
+                    <a href="#" title="toolTip">toolTip</a>
                   </li>
                 </ul>
               </li>
               <li>
-                <span title="Interaction">Interaction</span>
+                <span title="Popup">Popup</span>
                 <ul class="leftSubMenu">
                   <li>
-                    <a href="#" title="Hover transfrom">Hover transfrom</a>
+                    <a href="#" title="Popup show/hide">Popup show/hide</a>
                   </li>
                   <li>
-                    <a href="#" title="FadeIn & FadeOut">FadeIn & FadeOut</a>
+                    <a href="#" title="Toast popup">Toast popup</a>
                   </li>
                   <li>
-                    <a href="#" title="Click popup">Click popup</a>
+                    <a href="#" title="Drag popup">Drag popup</a>
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <span title="Etc">Etc</span>
+                <ul class="leftSubMenu">
+                  <li>
+                    <a href="#" title="Animation element">Animation element</a>
+                  </li>
+                  <li>
+                    <a href="#" title="Text ellipsis">Text ellipsis</a>
+                  </li>
+                  <li class="disabled">
+                    <a href="#" title="Key frames">Key frames</a>
                   </li>
                 </ul>
               </li>
             </ul>
           </div>
+
+            <div class="moreArea">
+              <button type="button" class="btnMobileMore">
+                <span class="hidden">메뉴 열기</span>
+              </button>
+            </div>  
 
             <div class="backArea">
                 <button type="button" class="btnBack">
@@ -156,53 +176,12 @@
                 </button>
             </div>
 
-            <div class="utilArea">
-  <ul>
-      <li>
-          <a href="mailto:sky11916@naver.com" class="btnMail">
-              <span class="hidden">문의</span>
-              <div class="toolTip mail">
-                  <span>메일 문의</span>
-              </div>
-          </a>
-      </li>
-      <li>
-          <button type="button" class="btnShare">
-              <span class="hidden">공유</span>
-              <div class="toolTip share">
-                  <span>공유하기</span>
-              </div>
-          </button>
-          
-      </li>
-      <li>
-          <button type="button" class="btnMore">
-            <span class="hidden">더보기</span>
-              <div class="moreSubMenu">
-                <ul>
-                    <li>
-                        <a href="https://github.com/Plush777" target="_blank">Github</a>
-                    </li>
-                    <li>
-                        <a href="https://velog.io/@sky" target="_blank">Velog</a>
-                    </li>
-                    <li>
-                        <a href="update-note.html" target="_blank">Update note</a>
-                    </li>
-                </ul>
-              </div>
-              <div class="toolTip more">
-                  <span>더보기</span>
-              </div>
-          </button>
-      </li>
-  </ul>
-</div>
+            @@include('include/util.html')
             
             <div class="rightArea">
                 <div class="textBox">
                     <div class="titleH1">
-                        <h1>Slide</h1>
+                        <h1>Floating Menu</h1>
                     </div>
                     <div class="tabWrap type01">
                       <div class="tabNav">
@@ -210,7 +189,6 @@
                           <li class="active orange">HTML</li>
                           <li class="pink">SCSS</li>
                           <li class="blue">CSS</li>
-                          <li class="yellow">JS</li>
                         </ul>
                       </div>
 
@@ -243,19 +221,9 @@
                           </pre>
                         </div>
                       </div>
-
-                      <div class="tabCont">
-                        <div class="highlightArea cScroll">
-                          <pre>
-                            <code class="language-javascript">
-
-                            </code>
-                          </pre>
-                        </div>
-                      </div>
                     </div>
                     <div class="btnArea end">
-                        <button type="button" class="button Bgblue" onclick="window.open('../result/result-layout-slide.html');">
+                        <button type="button" class="button Bgblue btnResult">
                           <span>결과보기</span>
                           <i class="ico result"></i>
                         </button>
@@ -263,20 +231,44 @@
                 </div>
             </div>
         </div>
-        <div class="popup share">
-    <div class="cont">
-      <div class="inner">
-        <p>아래 주소를 복사하여 다른 곳에 붙여넣으세요.</p>
-        <div class="inputArea flex">
-          <input type="text" id="subUrl" class="full">
-          <button type="button" data-clipboard-target="#subUrl" class="button Bgblue w75 btnClip">
-            복사
-          </button>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div id="dimmed"></div>
+
+        <div id="frameBody" class="overflow-y">
+            <div id="toast">
+              <span>Esc 혹은 우측 상단 X 버튼을 눌러 결과창을 닫을 수 있습니다. </span>
+            </div>
+            <div class="btnArea">
+              <button type="button" class="frameClose">
+                <span class="hidden">프레임 창닫기</span>
+              </button>
+            </div>
+            <div class="wrap pre floating h2000">
+              <div id="floatingMenu">
+                <div class="menuArea">
+                  <button type="button" class="btnMenuList">
+                    <span class="hidden">마우스 오버 시 메뉴 더보기</span>
+                  </button>
+                  <ul class="menuList">
+                    <li>
+                      <a href="#">
+                        <i></i>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <i></i>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <i></i>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        @@include('include/popup-share.html')
     </div>
 </body>
 </html>
