--- a/pre-build/scss/css/layout.css
+++ b/pre-build/scss/css/layout.css
@@ -1,3 +1,5 @@
+/* text color */
+/* background */
 .wrap {
   position: relative;
   width: 100%;
@@ -85,6 +87,162 @@
 
 .wrap.pre.bgImage .resultCont + .resultCont {
   margin-top: 50px;
+}
+
+.wrap.pre.leftMenu .leftAreaType02 {
+  position: fixed;
+  left: 0;
+  width: 300px;
+  height: 100%;
+  overflow-y: auto;
+  z-index: 1100;
+  background-color: #1C253D;
+  -webkit-box-shadow: 0px 0px 3px 2px rgba(255, 255, 255, 0.5);
+          box-shadow: 0px 0px 3px 2px rgba(255, 255, 255, 0.5);
+}
+
+.wrap.pre.leftMenu .leftAreaType02 > .leftMenu > li {
+  position: relative;
+  cursor: pointer;
+}
+
+.wrap.pre.leftMenu .leftAreaType02 > .leftMenu > li.noDepth span:after {
+  display: none;
+}
+
+.wrap.pre.leftMenu .leftAreaType02 > .leftMenu > li span {
+  position: relative;
+  display: block;
+  padding: 16px 0;
+  text-indent: 28px;
+  font-family: 'Noto Sans Light';
+  font-size: 22px;
+  color: #fff;
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+.wrap.pre.leftMenu .leftAreaType02 > .leftMenu > li span:after {
+  content: '';
+  width: 15px;
+  height: 9px;
+  position: absolute;
+  top: 50%;
+  right: 28px;
+  -webkit-transition: .5s;
+  transition: .5s;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  background: url("../images/ico/ico-down.svg") no-repeat;
+}
+
+.wrap.pre.leftMenu .leftAreaType02 > .leftMenu > li a {
+  display: block;
+}
+
+.wrap.pre.leftMenu .leftAreaType02 > .leftMenu > li > a {
+  display: block;
+}
+
+.wrap.pre.leftMenu .leftAreaType02 > .leftMenu > li > ul.leftSubMenu {
+  display: none;
+  background-color: #273147;
+}
+
+.wrap.pre.leftMenu .leftAreaType02 > .leftMenu > li > ul.leftSubMenu li {
+  height: 55px;
+  line-height: 57px;
+}
+
+.wrap.pre.leftMenu .leftAreaType02 > .leftMenu > li > ul.leftSubMenu li a {
+  display: block;
+  font-family: 'Noto Sans';
+  font-size: 18px;
+  color: rgba(255, 255, 255, 0.8);
+  text-indent: 50px;
+  font-family: 'Noto Sans Light';
+}
+
+.wrap.pre.leftMenu .leftAreaType02 > .leftMenu > li > ul.leftSubMenu li a:hover {
+  background-color: #485162;
+}
+
+.wrap.pre.leftMenu .leftAreaType02 > .leftMenu > li > ul.leftSubMenu li.active a {
+  color: #266bf7;
+}
+
+.wrap.pre.leftMenu .leftAreaType02 > .leftMenu > li.active span {
+  background-color: #5869F0;
+}
+
+.wrap.pre.leftMenu .leftAreaType02 > .leftMenu > li.active span:after {
+  -webkit-transform: translateY(-50%) rotate(180deg);
+          transform: translateY(-50%) rotate(180deg);
+  background: url("../images/ico/ico-down-active.svg") no-repeat;
+}
+
+.wrap.pre.floating.h2000 {
+  height: 2000px;
+}
+
+.wrap.pre.floating #floatingMenu {
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+}
+
+.wrap.pre.floating #floatingMenu .menuArea .btnMenuList {
+  width: 56px;
+  height: 56px;
+  border-radius: 50px;
+  -webkit-box-shadow: 0px 0px 8px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 0px 8px 4px rgba(0, 0, 0, 0.25);
+  background-color: #333;
+}
+
+.wrap.pre.floating #floatingMenu .menuArea .btnMenuList:hover ~ ul.menuList li {
+  visibility: visible;
+  -webkit-transform: translateY(0) scale(1);
+          transform: translateY(0) scale(1);
+}
+
+.wrap.pre.floating #floatingMenu .menuArea ul.menuList {
+  position: absolute;
+  top: -211px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.wrap.pre.floating #floatingMenu .menuArea ul.menuList li {
+  visibility: hidden;
+  -webkit-transform: translateY(0) scale(0);
+          transform: translateY(0) scale(0);
+  -webkit-transition: .5s;
+  transition: .5s;
+  -webkit-transition-delay: 0.03s;
+          transition-delay: 0.03s;
+  margin: 0 auto;
+  width: 56px;
+  height: 56px;
+  border-radius: 50px;
+  -webkit-box-shadow: 0px 0px 8px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 0px 8px 4px rgba(0, 0, 0, 0.25);
+  background-color: #333;
+}
+
+.wrap.pre.floating #floatingMenu .menuArea ul.menuList li a {
+  display: block;
+  width: inherit;
+  height: inherit;
+}
+
+.wrap.pre.floating #floatingMenu .menuArea ul.menuList li + li {
+  margin-top: 15px;
 }
 
 .tabWrap .tabCont {
