--- a/pre-build/css/component.css
+++ b/pre-build/css/component.css
@@ -109,6 +109,10 @@ li {
   list-style: none;
 }
 
+summary::marker {
+  display: none !important;
+}
+
 /* text color */
 /* background */
 /* common */
@@ -1344,6 +1348,10 @@ i.ico.result {
   background-color: #fff;
 }
 
+#frameBody .btnArea.r20 {
+  right: 20px;
+}
+
 #frameBody.fixed {
   position: fixed;
 }
@@ -1390,6 +1398,53 @@ i.ico.result {
   background-size: 24px 24px;
   background-position: center;
   background-image: url("../images/mobile/ico-mobile-more.png");
+}
+
+/* icon */
+i.ico {
+  display: inline-block;
+  background-repeat: no-repeat;
+  background-position: center;
+  /* White type */
+}
+
+i.ico.plus-w {
+  width: 32px;
+  height: 32px;
+  background-image: url("../images/ico/ico-plus-w.png");
+}
+
+i.ico.download-w {
+  width: 48px;
+  height: 48px;
+  background-image: url("../images/ico/ico-download-w.png");
+}
+
+i.ico.bookMark-w {
+  width: 48px;
+  height: 48px;
+  background-image: url("../images/ico/ico-bookMark-w.png");
+}
+
+i.ico.github-w {
+  width: 48px;
+  height: 48px;
+  background-image: url("../images/ico/ico-github-w.png");
+}
+
+i.ico.wide40 {
+  background-size: 40px 40px;
+  background-position: center 8px;
+}
+
+i.ico.wide32 {
+  background-size: 32px 32px;
+  background-position: center 11px;
+}
+
+i.ico.center {
+  display: block;
+  margin: 0 auto;
 }
 
 /* import */
@@ -1790,6 +1845,8 @@ i.ico.result {
   text-align: center;
 }
 
+/* text color */
+/* background */
 .wrap {
   position: relative;
   width: 100%;
@@ -1877,6 +1934,162 @@ i.ico.result {
 
 .wrap.pre.bgImage .resultCont + .resultCont {
   margin-top: 50px;
+}
+
+.wrap.pre.leftMenu .leftAreaType02 {
+  position: fixed;
+  left: 0;
+  width: 300px;
+  height: 100%;
+  overflow-y: auto;
+  z-index: 1100;
+  background-color: #1C253D;
+  -webkit-box-shadow: 0px 0px 3px 2px rgba(255, 255, 255, 0.5);
+          box-shadow: 0px 0px 3px 2px rgba(255, 255, 255, 0.5);
+}
+
+.wrap.pre.leftMenu .leftAreaType02 > .leftMenu > li {
+  position: relative;
+  cursor: pointer;
+}
+
+.wrap.pre.leftMenu .leftAreaType02 > .leftMenu > li.noDepth span:after {
+  display: none;
+}
+
+.wrap.pre.leftMenu .leftAreaType02 > .leftMenu > li span {
+  position: relative;
+  display: block;
+  padding: 16px 0;
+  text-indent: 28px;
+  font-family: 'Noto Sans Light';
+  font-size: 22px;
+  color: #fff;
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+.wrap.pre.leftMenu .leftAreaType02 > .leftMenu > li span:after {
+  content: '';
+  width: 15px;
+  height: 9px;
+  position: absolute;
+  top: 50%;
+  right: 28px;
+  -webkit-transition: .5s;
+  transition: .5s;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  background: url("../images/ico/ico-down.svg") no-repeat;
+}
+
+.wrap.pre.leftMenu .leftAreaType02 > .leftMenu > li a {
+  display: block;
+}
+
+.wrap.pre.leftMenu .leftAreaType02 > .leftMenu > li > a {
+  display: block;
+}
+
+.wrap.pre.leftMenu .leftAreaType02 > .leftMenu > li > ul.leftSubMenu {
+  display: none;
+  background-color: #273147;
+}
+
+.wrap.pre.leftMenu .leftAreaType02 > .leftMenu > li > ul.leftSubMenu li {
+  height: 55px;
+  line-height: 57px;
+}
+
+.wrap.pre.leftMenu .leftAreaType02 > .leftMenu > li > ul.leftSubMenu li a {
+  display: block;
+  font-family: 'Noto Sans';
+  font-size: 18px;
+  color: rgba(255, 255, 255, 0.8);
+  text-indent: 50px;
+  font-family: 'Noto Sans Light';
+}
+
+.wrap.pre.leftMenu .leftAreaType02 > .leftMenu > li > ul.leftSubMenu li a:hover {
+  background-color: #485162;
+}
+
+.wrap.pre.leftMenu .leftAreaType02 > .leftMenu > li > ul.leftSubMenu li.active a {
+  color: #266bf7;
+}
+
+.wrap.pre.leftMenu .leftAreaType02 > .leftMenu > li.active span {
+  background-color: #5869F0;
+}
+
+.wrap.pre.leftMenu .leftAreaType02 > .leftMenu > li.active span:after {
+  -webkit-transform: translateY(-50%) rotate(-180deg);
+          transform: translateY(-50%) rotate(-180deg);
+  background: url("../../images/ico/ico-down-w.svg") no-repeat;
+}
+
+.wrap.pre.floating.h2000 {
+  height: 2000px;
+}
+
+.wrap.pre.floating #floatingMenu {
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+}
+
+.wrap.pre.floating #floatingMenu .menuArea .btnMenuList {
+  width: 56px;
+  height: 56px;
+  border-radius: 50px;
+  -webkit-box-shadow: 0px 0px 8px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 0px 8px 4px rgba(0, 0, 0, 0.25);
+  background: #333 url("../../images/ico/ico-plus-w.png") no-repeat center;
+}
+
+.wrap.pre.floating #floatingMenu .menuArea .btnMenuList:hover ~ ul.menuList li {
+  visibility: visible;
+  -webkit-transform: translateY(0) scale(1);
+          transform: translateY(0) scale(1);
+}
+
+.wrap.pre.floating #floatingMenu .menuArea ul.menuList {
+  position: absolute;
+  top: -211px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.wrap.pre.floating #floatingMenu .menuArea ul.menuList li {
+  visibility: hidden;
+  -webkit-transform: translateY(0) scale(0);
+          transform: translateY(0) scale(0);
+  -webkit-transition: .5s;
+  transition: .5s;
+  -webkit-transition-delay: 0.03s;
+          transition-delay: 0.03s;
+  margin: 0 auto;
+  width: 56px;
+  height: 56px;
+  border-radius: 50px;
+  -webkit-box-shadow: 0px 0px 8px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 0px 8px 4px rgba(0, 0, 0, 0.25);
+  background-color: #333;
+}
+
+.wrap.pre.floating #floatingMenu .menuArea ul.menuList li a {
+  display: block;
+  width: inherit;
+  height: inherit;
+}
+
+.wrap.pre.floating #floatingMenu .menuArea ul.menuList li + li {
+  margin-top: 15px;
 }
 
 .tabWrap .tabCont {
