--- a/pre-build/scss/component/layout.scss
+++ b/pre-build/scss/component/layout.scss
@@ -60,7 +60,7 @@
               }
               &.active{
                 span{background-color: #5869F0;
-                  &:after{transform: translateY(-50%) rotate(180deg); background: url("../images/ico/ico-down-active.svg") no-repeat;}
+                  &:after{transform: translateY(-50%) rotate(-180deg); background: url("../../images/ico/ico-down-w.svg") no-repeat;}
                 }
               }
             }
@@ -72,8 +72,9 @@
         &.h2000{height: 2000px;}
         #floatingMenu{position: fixed; right: 20px; bottom: 20px;
           .menuArea{
-            .btnMenuList{width: 56px; height: 56px; border-radius: 50px; box-shadow: 0px 0px 8px 4px rgba($color: #000000, $alpha: 0.25); background-color: $c333;
-              &:hover ~ul.menuList li{visibility: visible; transform: translateY(0) scale(1);}
+            .btnMenuList{width: 56px; height: 56px; border-radius: 50px; box-shadow: 0px 0px 8px 4px rgba($color: #000000, $alpha: 0.25); 
+            background: $c333 url("../../images/ico/ico-plus-w.png")no-repeat center;
+              &:hover ul.menuList li{visibility: visible; transform: translateY(0) scale(1);}
             }
             ul.menuList{position: absolute; top: -211px; display: flex; flex-direction: column; 
               li{visibility: hidden; transform: translateY(0) scale(0); transition: .5s; transition-delay: 0.03s; margin: 0 auto;
